--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +8,18 @@
 </head>
 <body>
   <h1>PILIH ORDERAN ANDA</h1>
-  <div>
-    <label for="namaSembako">Nama :</label>
-    <input type="text" id="namaSembako">
-    <label for="hargaSembako">Harga :</label>
-    <input type="number" id="hargaSembako">
-    <button id="tambahSembako">Tambah</button>
+  <div class="class1 class2">
+    <label for="namaAnda">Nama Anda :</label>
+    <input type="text" id="namaAnda">
+    <label for="namaItem">Nama Item :</label>
+    <input type="text" id="namaItem">
+    <label for="hargaItem">Harga :</label>
+    <input type="number" id="hargaItem">
+    <button id="tambahItem">Tambah Item</button>
   </div>
   <div>
     <h2>Pesanan Anda:</h2>
-    <ul id="sembakoList"></ul>
+    <div class="ul" id="ItemList"></div>
   </div>
   <script src="app.js"></script>
 </body>
